test/interaction/Issue2728.agda
record R : Set where
  infix 0 _+_
